--- a/styles.css
+++ b/styles.css
@@ -13,20 +13,26 @@ body{
     background-color: rgb(26, 25, 25);
 }
 #display{
-    width: 256px;
+    padding-left: 10px ;
+    width: 248px;
     border: none;
     border-radius: inherit;
-    height: 50px;
+    height: 60px;
     background-color: rgb(83, 82, 82);
+    color: white;
+    font-size: 1.1em;
+    
 }
 .keys{
-    padding: 5px;
+    padding: 10px;
     display: grid;
     grid-template-columns: repeat(4, 50px);
-    gap: 5px 5px ;
-   justify-content: space-around;
+    gap: 5px;
+    justify-content: space-around;
 }
 button{
+    font-size: 1.5em;
+    font-weight: bold;
     width: 50px;
     height: 50px;
     background-color: rgb(83, 82, 82);
@@ -34,8 +40,14 @@ button{
     border-radius: 50px;
     border: none;
 }
+button:hover{
+    background-color: rgba(83, 82, 82, 0.758);
+}
 .sign{
     background-color: rgb(234, 68, 115);
+}
+.sign:hover{
+    background-color: rgba(234, 68, 115, 0.865);
 }
 #equal{
     grid-column-start: 4;
